# tzfpy

./: .env.example  .gitignore  AGENTS.md  BACKUP_INDEX.md  CLAUDE.md  Cargo.toml  Makefile  NOTICE  README.md  THIRDPARTY.yml  pyproject.toml  requirements_dev.txt  setup.py  tzfpy.pyi
.github/: FUNDING.yml  dependabot.yml
.github/scripts/: build_simple_index.py
.github/workflows/: Bench.yml  CI.yml  CodSpeed.yml  PublishSimpleIndex.yml  SyncPyPIReleases.yml  Test.yml  UpdateReleaseWheelsCsv.yml  debug.yml
docs/: release_wheels.csv
docs/DATA_CLEAN_2026-03-14/: .gitignore  README.md  analyze_cleanup_candidates.py  cleanup_ranked_list.csv  deletable_files_by_version.csv  deletable_files_todo_by_version.md  deletable_versions_summary.csv  fetch_pypi_all_files.py  generate_deletable_files.py  pypi_all_files.csv  script_job_5c3854808754dd3102806a757c45cf6f_0.csv  script_job_6a7f35f7e60dc30855f818b6187f836a_0.csv  script_job_81da1603e50b330166a12ee99b59069c_0.csv  script_job_b7dcfb358f517da711bbf729a784c521_0.csv
examples/: README.md  pyproject.toml  tzfpy_with_arrow.py  tzfpy_with_dataframe_numpy.py  tzfpy_with_dataframe_pandas.py  tzfpy_with_dataframe_polars.py  tzfpy_with_datetime.py  tzfpy_with_fastapi.py  tzfpy_with_whenever.py
lab/: hello.py  pyproject.toml  rxconfig.py
lab/lab/: lab.py
scripts/: build_notice.py  build_simple_index.py  fetch_pypi_release_files.py  filter_missing_release_files.py  measure_memory_timezonefinder.py  measure_memory_tzfpy.py  resolve_pypi_versions.py
site/docs/: release_wheels.csv
src/: lib.rs
test_batch/: test_batch.py
tests/: test_basic.py  test_bench.py  test_bench_3rd.py  test_build_simple_index.py  test_compatibility.py  test_exp_index_env.py  test_smock.py
